--- a/styles.css
+++ b/styles.css
@@ -50,6 +50,7 @@ body {
   align-items: center;
   font-weight: normal;
   box-shadow: 0 4px 2px rgba(0, 0, 0, 0.2);
+  margin-bottom: 20px;
 }
 
 .freeTrial {
@@ -57,19 +58,58 @@ body {
 }
 
 .inputContainer {
-  width: 600px;
   height: 500px;
   background-color: white;
   border-radius: 7px;
-  display: grid;
+  display: flex;
+  flex-direction: column;
+  gap: 1.3em;
+  padding: 8px 30px 0 30px;
   justify-content: center;
+  box-shadow: 0 6px 2px rgba(0, 0, 0, 0.2);
 }
 
 .enterInput {
-  height: 50px;
-  top: 10px;
+  height: 60px;
+  border-radius: 7px;
+  border: 1px solid hsl(246, 25%, 77%);
+}
+
+.enterInput:hover {
+  border: 3px solid hsl(358, 74%, 73%);
+  outline: none;
 }
 
 .enterInput::placeholder {
-  padding-left: 30px;
+  font-weight: bold;
+  padding: 0 0 0 20px;
+}
+
+.claimButton {
+  height: 60px;
+  border-radius: 7px;
+  letter-spacing: 1px;
+  background-color: hsl(153, 59%, 51%);
+  color: white;
+  font-weight: bold;
+  border: none;
+  cursor: pointer;
+  box-shadow: 0 4px 2px hsl(153, 58%, 46%);
+}
+
+.claimButton:hover {
+  background-color: hsl(154, 65%, 68%);
+  box-shadow: 0 4px 2px hsl(153, 33%, 64%);
+}
+
+.submitAgreement {
+  font-size: 12px;
+  text-align: center;
+  color: hsl(246, 25%, 77%);
+}
+
+.termsAndServices {
+  color: hsl(0, 100%, 74%);
+  font-weight: bold;
+  cursor: pointer;
 }
